# commission

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  2.0  README.md  log  oca_dependencies.txt  test-requirements.txt
account_commission/: README.rst  __manifest__.py
commission/: README.rst  __manifest__.py
commission_by_partner/: README.rst  __init__.py  __openerp__.py
commission_formula/: README.rst  __init__.py  __manifest__.py
commission_salesman/: README.rst  __manifest__.py
contract_commission/: README.rst  __init__.py  __manifest__.py  __openerp__.py
hr_commission/: README.rst  __init__.py  __manifest__.py  __openerp__.py
hr_commission_payslip/: README.rst  __openerp__.py
sale_commission/: .copier-answers.yml  README.md  README.rst  __init__.py  __manifest__.py  __openerp__.py  hooks.py  invoice.py  invoice_view.xml  partner.py  partner_agent.py  partner_agent_view.xml  partner_view.xml  product_view.xml  sale_agent.py  sale_agent_demo.xml  sale_agent_view.xml  sale_order.py  sale_order_view.xml  saleagent.py  saleagent_view.xml  settled.py  settled_view.xml  settlement_wizard.xml  stock_picking.py  stock_picking_view.xml
sale_commission_advance/: README.rst  __manifest__.py
sale_commission_agent_restrict/: README.rst  __init__.py  __manifest__.py  hooks.py
sale_commission_agent_restrict_product_criteria/: README.rst  __manifest__.py
sale_commission_areamanager/: README.rst  __manifest__.py
sale_commission_brand/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1205 files in other folders)
