[project]
name = "odoo-addons-oca-commission"
version = "17.0.20240517.0"
dependencies = [
    "odoo-addon-account_commission>=17.0dev,<17.1dev",
    "odoo-addon-commission>=17.0dev,<17.1dev",
    "odoo-addon-commission_formula>=17.0dev,<17.1dev",
    "odoo-addon-sale_commission>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
